fixed the swagger tags
