# controllers/contacts.js
@@ -2,7 +2,7 @@ const mongodb = require("../db/index");
 const ObjectId = require("mongodb").ObjectId;
 
 const getAll = async (req, res) => {
-    //#swagger.tags=[Contacts]
+    //#swagger.tags=["Contacts"]
     const results = await mongodb.getDb().db().collection("contacts").find();
     results.toArray().then((lists) => {
         res.setHeader("Content-Type", "application/json");
@@ -11,7 +11,7 @@ const getAll = async (req, res) => {
 }
 
 const getSingle = async (req, res) => {
-    //#swagger.tags=[Contacts]
+    //#swagger.tags=["Contacts"]
     if (!ObjectId.isValid(req.params.id)) {
         res.status(400).json("Must use a valid contact id to find a contact.");
     }
@@ -24,7 +24,7 @@ const getSingle = async (req, res) => {
 }
 
 const createContact = async (req, res) => {
-    //#swagger.tags=[Contacts]
+    //#swagger.tags=["Contacts"]
     const contact = {
         firstName: req.body.firstName,
         lastName: req.body.lastName,
@@ -41,7 +41,7 @@ const createContact = async (req, res) => {
 }
 
 const updateContact = async (req, res) => {
-    //#swagger.tags=[Contacts]
+    //#swagger.tags=["Contacts"]
     if (!ObjectId.isValid(req.params.id)) {
         res.status(400).json("Must use a valid contact id to find a contact.");
     }
@@ -62,7 +62,7 @@ const updateContact = async (req, res) => {
 }
 
 const deleteContact = async (req, res) => {
-    //#swagger.tags=[Contacts]
+    //#swagger.tags=["Contacts"]
     if (!ObjectId.isValid(req.params.id)) {
         res.status(400).json("Must use a valid contact id to find a contact.");
     }
